packages/docs/content/4.2/components/offcanvas.mdx
---
title: React Offcanvas Component
name: Offcanvas
description: React alert component allows build hidden sidebars into your project for navigation, shopping carts.
menu: Components
route: /components/offcanvas
---

import { useState } from 'react'

import {
  CButton,
  CCloseButton,
  CCallout,
  COffcanvas,
  COffcanvasBody,
  COffcanvasHeader,
  COffcanvasTitle,
} from '@coreui/react/src/index'

## Examples

### Offcanvas components

Below is an offcanvas example that is shown by default (via `visible={true}`). Offcanvas includes support for a header with a close button and an optional body class for some initial `padding`. We suggest that you include offcanvas headers with dismiss actions whenever possible, or provide an explicit dismiss action.

<Example className="docs-example-offcanvas bg-light p-0">
  <COffcanvas backdrop={false} placement="start" portal={false} visible={true}>
    <COffcanvasHeader>
      <COffcanvasTitle>Offcanvas</COffcanvasTitle>
      <CCloseButton className="text-reset" />
    </COffcanvasHeader>
    <COffcanvasBody>
      Content for the offcanvas goes here. You can place just about any Bootstrap component or
      custom elements here.
    </COffcanvasBody>
  </COffcanvas>
</Example>

```jsx
<COffcanvas backdrop={false} placement="start" portal={false} visible={true}>
  <COffcanvasHeader>
    <COffcanvasTitle>Offcanvas</COffcanvasTitle>
    <CCloseButton className="text-reset" />
  </COffcanvasHeader>
  <COffcanvasBody>
    Content for the offcanvas goes here. You can place just about any Bootstrap component or custom
    elements here.
  </COffcanvasBody>
</COffcanvas>
```

### Live demo

Use the buttons below to show and hide an offcanvas component.

- `visible={false}` hides content (default)
- `visible` or `visible={true}` shows content

export const LiveDemoExample = () => {
  const [visible, setVisible] = useState(false)
  return (
    <>
      <CButton onClick={() => setVisible(true)}>Toggle offcanvas</CButton>
      <COffcanvas placement="start" visible={visible} onHide={() => setVisible(false)}>
        <COffcanvasHeader>
          <COffcanvasTitle>Offcanvas</COffcanvasTitle>
          <CCloseButton className="text-reset" onClick={() => setVisible(false)} />
        </COffcanvasHeader>
        <COffcanvasBody>
          Content for the offcanvas goes here. You can place just about any Bootstrap component or
          custom elements here.
        </COffcanvasBody>
      </COffcanvas>
    </>
  )
}

<Example>
  <LiveDemoExample />
</Example>

```jsx
const [visible, setVisible] = useState(false)
return (
  <>
    <CButton onClick={() => setVisible(true)}>Toggle offcanvas</CButton>
    <COffcanvas placement="start" visible={visible} onHide={() => setVisible(false)}>
      <COffcanvasHeader>
        <COffcanvasTitle>Offcanvas</COffcanvasTitle>
        <CCloseButton className="text-reset" onClick={() => setVisible(false)} />
      </COffcanvasHeader>
      <COffcanvasBody>
        Content for the offcanvas goes here. You can place just about any Bootstrap component or
        custom elements here.
      </COffcanvasBody>
    </COffcanvas>
  </>
)
```

## Placement

There's no default placement for offcanvas components, so you must add one of the modifier classes below;

- `placement="start"` places offcanvas on the left of the viewport (shown above)
- `placement="end"` places offcanvas on the right of the viewport
- `placement="top"` places offcanvas on the top of the viewport
- `placement="bottom"` places offcanvas on the bottom of the viewport

Try the top, right, and bottom examples out below.

export const PlacementTopExample = () => {
  const [visible, setVisible] = useState(false)
  return (
    <>
      <CButton onClick={() => setVisible(true)}>Toggle top offcanvas</CButton>
      <COffcanvas placement="top" visible={visible} onHide={() => setVisible(false)}>
        <COffcanvasHeader>
          <COffcanvasTitle>Offcanvas</COffcanvasTitle>
          <CCloseButton className="text-reset" onClick={() => setVisible(false)} />
        </COffcanvasHeader>
        <COffcanvasBody>
          Content for the offcanvas goes here. You can place just about any Bootstrap component or
          custom elements here.
        </COffcanvasBody>
      </COffcanvas>
    </>
  )
}

<Example>
  <PlacementTopExample />
</Example>

```jsx
const [visible, setVisible] = useState(false)
return (
  <>
    <CButton onClick={() => setVisible(true)}>Toggle top offcanvas</CButton>
    <COffcanvas placement="top" visible={visible} onHide={() => setVisible(false)}>
      <COffcanvasHeader>
        <COffcanvasTitle>Offcanvas</COffcanvasTitle>
        <CCloseButton className="text-reset" onClick={() => setVisible(false)} />
      </COffcanvasHeader>
      <COffcanvasBody>
        Content for the offcanvas goes here. You can place just about any Bootstrap component or
        custom elements here.
      </COffcanvasBody>
    </COffcanvas>
  </>
)
```

export const PlacementRightExample = () => {
  const [visible, setVisible] = useState(false)
  return (
    <>
      <CButton onClick={() => setVisible(true)}>Toggle right offcanvas</CButton>
      <COffcanvas placement="end" visible={visible} onHide={() => setVisible(false)}>
        <COffcanvasHeader>
          <COffcanvasTitle>Offcanvas</COffcanvasTitle>
          <CCloseButton className="text-reset" onClick={() => setVisible(false)} />
        </COffcanvasHeader>
        <COffcanvasBody>
          Content for the offcanvas goes here. You can place just about any Bootstrap component or
          custom elements here.
        </COffcanvasBody>
      </COffcanvas>
    </>
  )
}

<Example>
  <PlacementRightExample />
</Example>

```jsx
const [visible, setVisible] = useState(false)
return (
  <>
    <CButton onClick={() => setVisible(true)}>Toggle right offcanvas</CButton>
    <COffcanvas placement="right" visible={visible} onHide={() => setVisible(false)}>
      <COffcanvasHeader>
        <COffcanvasTitle>Offcanvas</COffcanvasTitle>
        <CCloseButton className="text-reset" onClick={() => setVisible(false)} />
      </COffcanvasHeader>
      <COffcanvasBody>
        Content for the offcanvas goes here. You can place just about any Bootstrap component or
        custom elements here.
      </COffcanvasBody>
    </COffcanvas>
  </>
)
```

export const PlacementBottomExample = () => {
  const [visible, setVisible] = useState(false)
  return (
    <>
      <CButton onClick={() => setVisible(true)}>Toggle bottom offcanvas</CButton>
      <COffcanvas placement="bottom" visible={visible} onHide={() => setVisible(false)}>
        <COffcanvasHeader>
          <COffcanvasTitle>Offcanvas</COffcanvasTitle>
          <CCloseButton className="text-reset" onClick={() => setVisible(false)} />
        </COffcanvasHeader>
        <COffcanvasBody>
          Content for the offcanvas goes here. You can place just about any Bootstrap component or
          custom elements here.
        </COffcanvasBody>
      </COffcanvas>
    </>
  )
}

<Example>
  <PlacementBottomExample />
</Example>

```jsx
const [visible, setVisible] = useState(false)
return (
  <>
    <CButton onClick={() => setVisible(true)}>Toggle bottom offcanvas</CButton>
    <COffcanvas placement="bottom" visible={visible} onHide={() => setVisible(false)}>
      <COffcanvasHeader>
        <COffcanvasTitle>Offcanvas</COffcanvasTitle>
        <CCloseButton className="text-reset" onClick={() => setVisible(false)} />
      </COffcanvasHeader>
      <COffcanvasBody>
        Content for the offcanvas goes here. You can place just about any Bootstrap component or
        custom elements here.
      </COffcanvasBody>
    </COffcanvas>
  </>
)
```

export const BackdropExample = () => {
  const [visibleScrolling, setVisibleScrolling] = useState(false)
  const [visibleWithBackdrop, setVisibleWithBackdrop] = useState(false)
  const [visibleWithBothOptions, setVisibleWithBothOptions] = useState(false)
  return (
    <>
      <CButton color="primary" onClick={() => setVisibleScrolling(true)}>Enable body scrolling</CButton>
      <CButton color="primary" onClick={() => setVisibleWithBackdrop(true)}>Enable backdrop (default)</CButton>
      <CButton color="primary" onClick={() => setVisibleWithBothOptions(true)}>Enable both scrolling &amp; backdrop</CButton>
      <COffcanvas backdrop={false} placement="start" scroll visible={visibleScrolling} onHide={() => setVisibleScrolling(false)}>
        <COffcanvasHeader>
          <COffcanvasTitle>Offcanvas</COffcanvasTitle>
          <CCloseButton className="text-reset" onClick={() => setVisibleScrolling(false)}/>
        </COffcanvasHeader>
        <COffcanvasBody>
          <p>Try scrolling the rest of the page to see this option in action.</p>
        </COffcanvasBody>
      </COffcanvas>
      <COffcanvas placement="start" visible={visibleWithBackdrop} onHide={() => setVisibleWithBackdrop(false)}>
        <COffcanvasHeader>
          <COffcanvasTitle>Offcanvas</COffcanvasTitle>
          <CCloseButton className="text-reset" onClick={() => setVisibleWithBackdrop(false)}/>
        </COffcanvasHeader>
        <COffcanvasBody>
          <p>.....</p>
        </COffcanvasBody>
      </COffcanvas>
      <COffcanvas placement="start" scroll visible={visibleWithBothOptions} onHide={() => setVisibleWithBothOptions(false)}>
        <COffcanvasHeader>
          <COffcanvasTitle>Offcanvas</COffcanvasTitle>
          <CCloseButton className="text-reset" onClick={() => setVisibleWithBothOptions(false)}/>
        </COffcanvasHeader>
        <COffcanvasBody>
          <p>Try scrolling the rest of the page to see this option in action.</p>
        </COffcanvasBody>
      </COffcanvas>
    </>
  )
}

## Backdrop 

Scrolling the `<body>` element is disabled when an offcanvas and its backdrop are visible. Use the `scroll` property to toggle `<body>` scrolling and `backdrop` to toggle the backdrop.

<Example>
  <BackdropExample />
</Example>

```jsx
const [visibleScrolling, setVisibleScrolling] = useState(false)
const [visibleWithBackdrop, setVisibleWithBackdrop] = useState(false)
const [visibleWithBothOptions, setVisibleWithBothOptions] = useState(false)
return (
  <>
    <CButton color="primary" onClick={() => setVisibleScrolling(true)}>Enable body scrolling</CButton>
    <CButton color="primary" onClick={() => setVisibleWithBackdrop(true)}>Enable backdrop (default)</CButton>
    <CButton color="primary" onClick={() => setVisibleWithBothOptions(true)}>Enable both scrolling &amp; backdrop</CButton>
    <COffcanvas backdrop={false} placement="start" scroll visible={visibleScrolling} onHide={() => setVisibleScrolling(false)}>
      <COffcanvasHeader>
        <COffcanvasTitle>Offcanvas</COffcanvasTitle>
        <CCloseButton className="text-reset" onClick={() => setVisibleScrolling(false)}/>
      </COffcanvasHeader>
      <COffcanvasBody>
        <p>Try scrolling the rest of the page to see this option in action.</p>
      </COffcanvasBody>
    </COffcanvas>
    <COffcanvas placement="start" visible={visibleWithBackdrop} onHide={() => setVisibleWithBackdrop(false)}>
      <COffcanvasHeader>
        <COffcanvasTitle>Offcanvas</COffcanvasTitle>
        <CCloseButton className="text-reset" onClick={() => setVisibleWithBackdrop(false)}/>
      </COffcanvasHeader>
      <COffcanvasBody>
        <p>.....</p>
      </COffcanvasBody>
    </COffcanvas>
    <COffcanvas placement="start" scroll visible={visibleWithBothOptions} onHide={() => setVisibleWithBothOptions(false)}>
      <COffcanvasHeader>
        <COffcanvasTitle>Offcanvas</COffcanvasTitle>
        <CCloseButton className="text-reset" onClick={() => setVisibleWithBothOptions(false)}/>
      </COffcanvasHeader>
      <COffcanvasBody>
        <p>Try scrolling the rest of the page to see this option in action.</p>
      </COffcanvasBody>
    </COffcanvas>
  </>
)
```

## Accessibility

Since the offcanvas panel is conceptually a modal dialog, be sure to add `aria-labelledby="..."`—referencing the offcanvas title—to `<COffcanvas>`. Note that you don’t need to add `role="dialog"` since we already add it automatically.

## Customizing

### CSS variables

React offcanvas uses local CSS variables on `.offcanvas` for enhanced real-time customization. Values for the CSS variables are set via Sass, so Sass customization is still supported, too.

```sass
--cui-offcanvas-width: #{$offcanvas-horizontal-width};
--cui-offcanvas-height: #{$offcanvas-vertical-height};
--cui-offcanvas-padding-x: #{$offcanvas-padding-x};
--cui-offcanvas-padding-y: #{$offcanvas-padding-y};
--cui-offcanvas-color: #{$offcanvas-color};
--cui-offcanvas-bg: #{$offcanvas-bg-color};
--cui-offcanvas-border-width: #{$offcanvas-border-width};
--cui-offcanvas-border-color: #{$offcanvas-border-color};
--cui-offcanvas-box-shadow: #{$offcanvas-box-shadow};
```

#### How to use CSS variables

```jsx
const vars = { 
  '--my-css-var': 10,
  '--my-another-css-var': "red" 
}
return <COffcanvas style={vars}>...</COffcanvas>
```

### SASS variables

```sass
$offcanvas-padding-y:               $modal-inner-padding;
$offcanvas-padding-x:               $modal-inner-padding;
$offcanvas-horizontal-width:        400px;
$offcanvas-vertical-height:         30vh;
$offcanvas-transition-duration:     .3s;
$offcanvas-border-color:            $modal-content-border-color;
$offcanvas-border-width:            $modal-content-border-width;
$offcanvas-title-line-height:       $modal-title-line-height;
$offcanvas-bg-color:                $modal-content-bg;
$offcanvas-color:                   $modal-content-color;
$offcanvas-box-shadow:              $modal-content-box-shadow-xs;
$offcanvas-backdrop-bg:             $modal-backdrop-bg;
$offcanvas-backdrop-opacity:        $modal-backdrop-opacity;
```

## API

### COffcanvas

`markdown:COffcanvas.api.mdx`

### COffcanvasBody

`markdown:COffcanvasBody.api.mdx`

### COffcanvasHeader

`markdown:COffcanvasHeader.api.mdx`

### COffcanvasTitle

`markdown:COffcanvasTitle.api.mdx`
